# adi2edi

./: .gitignore  Cargo.toml  README.md  build.ps1
src/: adi.pest  cli.rs  converter.rs  main.rs  reg1test.rs  utils.rs
