[package]
name = "adi2edi"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
pest = "2.7.11"
pest_derive = "2.7.11"
strip_bom = "1.0.0"
lazy_static = "1.5.0"
regex = "1.10.6"