[package]
name = "adi2edi"
version = "0.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
pest = "2.8"
pest_derive = "2.8"
strip_bom = "1.0.0"
lazy_static = "1.5.0"
regex = "1.11.1"